extend diagnose requests
